--- a/index.html
+++ b/index.html
@@ -4,13 +4,43 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/hero-area.css" />
     <title>Test-HTML</title>
   </head>
   <body>
     <div class="wrapper">
+      <header class="header container">
+        <a href="#" class="logo">
+          <img src="img/hero-area/svg/logo.svg" alt="" />
+        </a>
+
+        <nav class="navbar">
+          <a href="#home">Home</a>
+          <a href="#about">About Us</a>
+          <a href="#menu">Menu</a>
+          <a href="#products">Review</a>
+          <a href="#review">Contact</a>
+        </nav>
+      </header>
       <main class="page">
-        <section class="hero-area"></section>
+        <section class="hero-area">
+          <div class="hero-area__left">
+            <div class="hero-area__left--content">
+              <h1 class="hero-area__title">
+                Keep your dreams aroused with a cup of coffee.
+              </h1>
+              <p class="hero-area__description">
+                The coffee ideas shared by these generators are not cool at all,
+                as they are not a human being.
+              </p>
+              <button class="hero-area__btn">By now</button>
+            </div>
+          </div>
+          <div class="hero-area__right"></div>
+        </section>
         <section class="our-best-offer"></section>
         <section class="our-gallery"></section>
         <section class="follow-us"></section>
@@ -18,7 +48,5 @@
       </main>
       <footer class="footer"></footer>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="js/script.js"></script>
   </body>
 </html>
