made a section our-gallery

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/hero-area.css" />
+    <link rel="stylesheet" href="./css/our-gallery.css" />
     <title>Test-HTML</title>
   </head>
   <body>
@@ -42,7 +43,36 @@
           <div class="hero-area__right"></div>
         </section>
         <section class="our-best-offer"></section>
-        <section class="our-gallery"></section>
+        <section class="our-gallery">
+          <div class="our-gallery--wrapper">
+            <h3>Our Gallery</h3>
+            <p>
+              The coffee shop name generator is a great tool for those that are
+              deliberating what to call their new coffee.
+            </p>
+            <div class="our-gallery-grid">
+              <div class="our-gallery__item img1">
+                <img src="img/our-gallery/Image1.png" alt="img" />
+              </div>
+              <div class="our-gallery__item img2">
+                <img src="img/our-gallery/Image2.png" alt="img" />
+              </div>
+              <div class="our-gallery__item img3">
+                <img src="img/our-gallery/Image3.png" alt="img" />
+              </div>
+              <div class="our-gallery__item img4">
+                <img src="img/our-gallery/Image4.png" alt="img" />
+              </div>
+              <div class="our-gallery__item img5">
+                <img src="img/our-gallery/Image5.png" alt="img" />
+              </div>
+              <div class="our-gallery__item img6">
+                <img src="img/our-gallery/Image6.png" alt="img" />
+              </div>
+            </div>
+            <button class="our-gallery--btn">LOAD MORE</button>
+          </div>
+        </section>
         <section class="follow-us"></section>
         <section class="update-news"></section>
       </main>
