--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         <a href="#" class="logo">
           <img src="img/hero-area/svg/logo.svg" alt="" />
         </a>
-
+        <div class="burger">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
         <nav class="navbar">
           <a href="#home">Home</a>
           <a href="#about">About Us</a>
@@ -44,7 +48,7 @@
         </section>
         <section class="our-best-offer"></section>
         <section class="our-gallery">
-          <div class="our-gallery--wrapper">
+          <div class="our-gallery--wrapper container">
             <h3>Our Gallery</h3>
             <p>
               The coffee shop name generator is a great tool for those that are
