added bg into footer and follow-us section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/hero-area.css" />
     <link rel="stylesheet" href="./css/our-gallery.css" />
+    <link rel="stylesheet" href="./css/follow-us.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
     <title>Test-HTML</title>
   </head>
   <body>
