added some styles into section follow-us and added slider

--- a/index.html
+++ b/index.html
@@ -78,11 +78,31 @@
             </div>
             <button class="our-gallery--btn">LOAD MORE</button>
           </div>
+          <!-- start slider -->
+          <div class="our-gallery__slider slider-materials swiper hide">
+            <!-- Additional required wrapper -->
+            <div class="our-gallery-slider__wrapper swiper-wrapper">
+              <!-- Slides -->
+              <div class="slider-materials__slide swiper-slide">
+                <img src="./img/our-gallery/Image1.png" alt="img" />
+              </div>
+              <div class="slider-materials__slide swiper-slide">
+                <img src="./img/our-gallery/Image2.png" alt="img" />
+              </div>
+              <div class="slider-materials__slide swiper-slide">
+                <img src="./img/our-gallery/Image3.png" alt="img" />
+              </div>
+            </div>
+            <!-- If we need pagination -->
+            <div class="slider-materials__pagination swiper-pagination"></div>
+          </div>
+          <!-- end slider -->
         </section>
         <section class="follow-us"></section>
         <section class="update-news"></section>
       </main>
       <footer class="footer"></footer>
     </div>
+    <script src="./js/script.js"></script>
   </body>
 </html>
