added some styles into footer

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/hero-area.css" />
+    <link rel="stylesheet" href="./css/our-best-offer.css" />
     <link rel="stylesheet" href="./css/our-gallery.css" />
     <link rel="stylesheet" href="./css/follow-us.css" />
     <link rel="stylesheet" href="./css/footer.css" />
@@ -34,7 +35,7 @@
     <div class="wrapper">
       <header class="header container">
         <a href="#" class="logo">
-          <img src="img/hero-area/svg/logo.svg" alt="" />
+          <img src="img/hero-area/svg/logo.svg" alt="logo" />
         </a>
         <div class="burger">
           <div class="bar"></div>
@@ -118,7 +119,47 @@
         <section class="follow-us"></section>
         <section class="update-news"></section>
       </main>
-      <footer class="footer"></footer>
+
+      <footer class="footer">
+        <!-- <div class="footer-content">
+          <div class="footer-content__first">
+            <a href="#" class="logo">
+              <img src="img/hero-area/svg/logo.svg" alt="logo" />
+            </a>
+            <p>Creating a catchy tagline coffee shop business growth.</p>
+            <span>+8801742-527137</span>
+          </div>
+          <div class="footer-content__categies">
+            <h3>CATEGORIES</h3>
+            <ul>
+              <li>Ashley Szekeres Art</li>
+              <li>Merchandise</li>
+              <li>Gift Certificates</li>
+            </ul>
+          </div>
+          <div class="footer-content__information">
+            <h3>INFORMATION</h3>
+            <ul>
+              <li>Coffee Beans</li>
+              <li>Contact Us</li>
+              <li>Blog</li>
+            </ul>
+          </div>
+          <div class="footer-content__follow-us">
+            <h3>FOLLOW US</h3>
+            <ul>
+              <li>Facebook</li>
+              <li>Twitter</li>
+              <li>Instagram</li>
+          </div>
+        </div> -->
+        <div class="copyright">
+          <p>
+            Copyright © 2024 Coffee, All rights reserved. Present by
+            MoxCreative.
+          </p>
+        </div>
+      </footer>
     </div>
     <script src="./js/script.js"></script>
   </body>
