--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="./css/our-gallery.css" />
     <link rel="stylesheet" href="./css/follow-us.css" />
     <link rel="stylesheet" href="./css/footer.css" />
+    <link rel="stylesheet" href="css/update-news.css">
     <title>Coffee shop website</title>
   </head>
   <body>
@@ -116,8 +117,52 @@
           </div>
           <!-- end slider -->
         </section>
-        <section class="follow-us"></section>
-        <section class="update-news"></section>
+        <section class="follow-us">
+          <div id="follow-us">
+          <p style="color: #FF4B32">Follow US</p>
+          <h1>Have an inquiry?<br>
+            Text or call and ask Something.</h1>
+          <p><img src="img/follow-us/Telephone.svg" alt=""> +8801742-527137</p>
+          <p><img src="img/follow-us/gmaillogo.svg" alt=""> mdmaksedur17@gmail.com</p>
+          <div class="nav-follow-us">
+            <img src="img/follow-us/Twitter.svg" alt="">
+            <img src="img/follow-us/Facebook.svg" alt="">
+            <img src="img/follow-us/Instagram.svg" alt="">
+            <img src="img/follow-us/Linkdin.svg" alt="">
+          </div>
+          </div>
+        </section>
+        <section class="update-news">
+          <div id="update-news">
+          <h1>Update News</h1>
+            <p>A cup of brewed coffee represents a contribution of up to 1.8 grams<br>
+              fiber of the recommended.</p>
+          </div>
+          <div class="area-update-news">
+            <div class="update-img">
+              <img src="img/update-news/Image-update.png" height="300" width="362" alt=""/>
+              <p>Coffe beans</p>
+              <p>These advertising mottos are targeted to the 56% of coffee drinking consumers.</p>
+              <p>Learn More</p>
+            </div>
+            <div class="update-img">
+              <img src="img/update-news/Image-update2.png" height="300" width="362" alt=""/>
+              <p>Coffe beans</p>
+              <p>These advertising mottos are targeted to the 56% of coffee drinking consumers.</p>
+              <p>Learn More</p>
+            </div>
+            <div class="update-img">
+              <img src="img/update-news/Imageupdate-3.png" height="300" width="362" alt=""/>
+              <p>Coffe beans</p>
+              <p>These advertising mottos are targeted to the 56% of coffee drinking consumers.</p>
+              <p>Learn More</p>
+            </div>
+          </div>
+
+         
+
+
+        </section>
       </main>
 
       <footer class="footer">
