added some styles into footer

--- a/index.html
+++ b/index.html
@@ -4,20 +4,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./img/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./img/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./img/favicon_io/favicon-16x16.png"
+    />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/hero-area.css" />
+    <link rel="stylesheet" href="./css/our-best-offer.css" />
     <link rel="stylesheet" href="./css/our-gallery.css" />
     <link rel="stylesheet" href="./css/follow-us.css" />
     <link rel="stylesheet" href="./css/footer.css" />
-    <title>Test-HTML</title>
+    <title>Coffee shop website</title>
   </head>
   <body>
     <div class="wrapper">
       <header class="header container">
         <a href="#" class="logo">
-          <img src="img/hero-area/svg/logo.svg" alt="" />
+          <img src="img/hero-area/svg/logo.svg" alt="logo" />
         </a>
         <div class="burger">
           <div class="bar"></div>
@@ -101,7 +119,48 @@
         <section class="follow-us"></section>
         <section class="update-news"></section>
       </main>
-      <footer class="footer"></footer>
+
+      <footer class="footer">
+        <div class="footer-content container">
+          <div class="footer-content__first footer-text">
+            <a href="#" class="logo">
+              <img src="img/hero-area/svg/logo.svg" alt="logo" />
+            </a>
+            <p>Creating a catchy tagline coffee shop business growth.</p>
+            <span>+8801742-527137</span>
+          </div>
+          <div class="footer-content__categies footer-text">
+            <h3>CATEGORIES</h3>
+            <ul>
+              <li>Ashley Szekeres Art</li>
+              <li>Merchandise</li>
+              <li>Gift Certificates</li>
+            </ul>
+          </div>
+          <div class="footer-content__information footer-text">
+            <h3>INFORMATION</h3>
+            <ul>
+              <li>Coffee Beans</li>
+              <li>Contact Us</li>
+              <li>Blog</li>
+            </ul>
+          </div>
+          <div class="footer-content__follow-us footer-text">
+            <h3>FOLLOW US</h3>
+            <ul>
+              <li>Facebook</li>
+              <li>Twitter</li>
+              <li>Instagram</li>
+            </ul>
+          </div>
+        </div>
+        <div class="copyright">
+          <p>
+            Copyright © 2024 Coffee, All rights reserved. Present by
+            MoxCreative.
+          </p>
+        </div>
+      </footer>
     </div>
     <script src="./js/script.js"></script>
   </body>
