sketched styles in the section follow-us

--- a/index.html
+++ b/index.html
@@ -117,78 +117,92 @@
           </div>
         </section>
         <section class="follow-us">
-          <div id="follow-us">
-            <p style="color: #ff4b32">Follow US</p>
-            <h1>
-              Have an inquiry?<br />
-              Text or call and ask Something.
-            </h1>
-            <p>
-              <img src="img/follow-us/Telephone.svg" alt="" /> +8801742-527137
-            </p>
-            <p>
-              <img src="img/follow-us/gmaillogo.svg" alt="" />
-              mdmaksedur17@gmail.com
-            </p>
-            <div class="nav-follow-us">
-              <img src="img/follow-us/Twitter.svg" alt="" />
-              <img src="img/follow-us/Facebook.svg" alt="" />
-              <img src="img/follow-us/Instagram.svg" alt="" />
-              <img src="img/follow-us/Linkdin.svg" alt="" />
+          <div class="follow-us__wrappwer">
+            <div class="follow-us__content container">
+              <h3>Follow US</h3>
+              <p>
+                Have an inquiry?<br />
+                Text or call and ask Something.
+              </p>
+              <ul>
+                <li class="follow-us__content--mail">+8801742-527137</li>
+                <li class="follow-us__content--phone">
+                  mdmaksedur17@gmail.com
+                </li>
+              </ul>
+              <div class="follow-us__social">
+                <ul>
+                  <li>
+                    <img
+                      src="img/follow-us/Twitter.svg"
+                      al="social icon Twitter"
+                    />
+                  </li>
+                  <li>
+                    <img
+                      src="img/follow-us/Facebook.svg"
+                      alt="social icon Facebook"
+                    />
+                  </li>
+                  <li>
+                    <img
+                      src="img/follow-us/Instagram.svg"
+                      alt="social icon Instagram"
+                    />
+                  </li>
+                  <li>
+                    <img
+                      src="img/follow-us/Linkdin.svg"
+                      alt="social icon Linkdin"
+                    />
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </section>
         <section class="update-news">
-          <div id="update-news">
-            <h1>Update News</h1>
+          <div class="update-news__wrapper">
+            <h2>Update News</h2>
             <p>
               A cup of brewed coffee represents a contribution of up to 1.8
               grams<br />
               fiber of the recommended.
             </p>
           </div>
-          <div class="area-update-news">
-            <div class="update-img">
-              <img
-                src="img/update-news/Image-update.png"
-                height="300"
-                width="362"
-                alt=""
-              />
-              <p>Coffe beans</p>
-              <p>
-                These advertising mottos are targeted to the 56% of coffee
-                drinking consumers.
-              </p>
-              <p>Learn More</p>
+          <div class="update-news__cards">
+            <div class="update-news__card">
+              <img src="img/update-news/Image-update.png" alt="img" />
+              <div class="update-news__card--content">
+                <h3>Coffe beans</h3>
+                <p>
+                  These advertising mottos are targeted to the 56% of coffee
+                  drinking consumers.
+                </p>
+                <button>Learn More</button>
+              </div>
             </div>
-            <div class="update-img">
-              <img
-                src="img/update-news/Image-update2.png"
-                height="300"
-                width="362"
-                alt=""
-              />
-              <p>Coffe beans</p>
-              <p>
-                These advertising mottos are targeted to the 56% of coffee
-                drinking consumers.
-              </p>
-              <p>Learn More</p>
+            <div class="update-news__card">
+              <img src="img/update-news/Image-update2.png" alt="img" />
+              <div class="update-news__card--content">
+                <h3>Coffe beans</h3>
+                <p>
+                  These advertising mottos are targeted to the 56% of coffee
+                  drinking consumers.
+                </p>
+                <button>Learn More</button>
+              </div>
             </div>
-            <div class="update-img">
-              <img
-                src="img/update-news/Imageupdate-3.png"
-                height="300"
-                width="362"
-                alt=""
-              />
-              <p>Coffe beans</p>
-              <p>
-                These advertising mottos are targeted to the 56% of coffee
-                drinking consumers.
-              </p>
-              <p>Learn More</p>
+            <div class="update-news__card">
+              <img src="img/update-news/Imageupdate-3.png" alt="img" />
+              <div class="update-news__card--content">
+                <h3>Coffe beans</h3>
+                <p>
+                  These advertising mottos are targeted to the 56% of coffee
+                  drinking consumers.
+                </p>
+                <button>Learn More</button>
+              </div>
             </div>
           </div>
         </section>
