sketched styles in the section our-gallery

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <img src="img/our-gallery/Image6.png" alt="img" />
               </div>
             </div>
-            <button class="our-gallery--btn">LOAD MORE</button>
+            <button>LOAD MORE</button>
           </div>
           <div class="our-gallery-slider swiper-container">
             <h3>Our Gallery</h3>
