sketched styles in the section our-gallery

--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
             <h3>Our Gallery</h3>
             <div class="image-slider__wrapper swiper-wrapper">
               <div class="swiper-slide image-slider__slide">
-                <img src="img/our-gallery/Image1.png" alt="" />
+                <img src="img/our-gallery/Image1.png" alt="image" />
               </div>
               <div class="image-slider__slide swiper-slide">
-                <img src="img/our-gallery/Image2.png" alt="" />
+                <img src="img/our-gallery/Image2.png" alt="image" />
               </div>
               <div class="image-slider__slide swiper-slide">
-                <img src="img/our-gallery/Image3.png" alt="" />
+                <img src="img/our-gallery/Image3.png" alt="image" />
               </div>
             </div>
           </div>
