--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               </p>
             </div>
           </div>
-          <div class="our-best-offer__cards container">
+          <div class="our-best-offer__cards">
             <div class="our-best-offer__card">
               <img src="img/our-best-offer/image.jpg" alt="img" />
               <span>5.99</span>
