--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="#" class="logo">
           <img src="img/hero-area/svg/logo.svg" alt="logo" />
         </a>
-        <div class="burger">
+        <div id="burger" class="burger">
           <div class="bar"></div>
           <div class="bar"></div>
           <div class="bar"></div>
@@ -54,6 +54,16 @@
           <a href="#products">Review</a>
           <a href="#review">Contact</a>
         </nav>
+        <div class="mobMenu">
+          <nav id="mobile" class="mobile-menu">
+            <a href="#home">Home</a>
+            <a href="#about">About Us</a>
+            <a href="#menu">Menu</a>
+            <a href="#products">Review</a>
+            <a href="#review">Contact</a>
+            <button id="close" class="close">x</button>
+          </nav>
+        </div>
       </header>
       <main class="page">
         <section class="hero-area">
