added some styles

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
           <a href="#products">Review</a>
           <a href="#review">Contact</a>
         </nav>
-        <div class="mobMenu">
-          <nav id="mobile" class="mobile-menu">
-            <a href="#home">Home</a>
-            <a href="#about">About Us</a>
-            <a href="#menu">Menu</a>
-            <a href="#products">Review</a>
-            <a href="#review">Contact</a>
+        <div id="mobile" class="mobMenu">
+          <nav class="mobile-menu">
+            <a href="/">Home</a>
+            <a href="/">About Us</a>
+            <a href="/">Menu</a>
+            <a href="/">Review</a>
+            <a href="/">Contact</a>
             <button id="close" class="close">x</button>
           </nav>
         </div>
