--- a/index.html
+++ b/index.html
@@ -128,21 +128,60 @@
               <span>5.99</span>
               <h3>Brazilian coffe beans</h3>
               <p>Coffee that’s always you handle your own the way you like.</p>
-              <button>Learn More</button>
+              <button id="card--detail-1">Learn More</button>
+              <div id="card-1" class="card-detail">
+                <h4>Details</h4>
+                <p>
+                  The most common Brazilian varieties are Bourbon, Catuaí, Acaiá
+                  and Mundo Novo. The sub-varieties are Yellow and red Bourbon,
+                  Yellow and Red Catuaí, Topázio and others. Brazilian coffee
+                  beans preserve distinct features of added varieties,
+                  specifically known for creating a great espresso experience!
+                </p>
+                <button id="card--detail-1__close">Close</button>
+              </div>
             </div>
             <div class="our-best-offer__card">
               <img src="img/our-best-offer/image2.jpg" alt="img" />
               <span>4.99</span>
               <h3>Vietnam coffe beans</h3>
               <p>Coffee that’s always you handle your own the way you like.</p>
-              <button>Learn More</button>
+              <button id="card--detail-2">Learn More</button>
+              <div id="card-2" class="card-detail">
+                <h4>Details</h4>
+                <p>
+                  Indonesia is one of the largest coffee-producing and exporting
+                  countries in the world. The majority of Indonesian coffee
+                  production is the robusta variety. Indonesia is also famous
+                  Vietnamese Coffee is grown mainly in regions such as the
+                  Northwest (including Son La and Moc Chau plateau), Central
+                  Highlands (including Dak Lak and Lam Dong), and the Central
+                  region (including Quang Tri and Lam Dong). Nghe An. Each year,
+                  Vietnam produces and supplies a large amount of Coffee to the
+                  domestic and export markets, with five main types. Each coffee
+                  type has its unique shape, aroma, and taste.
+                </p>
+                <button id="card--detail-2__close">Close</button>
+              </div>
             </div>
             <div class="our-best-offer__card">
               <img src="img/our-best-offer/image3.jpg" alt="img" />
               <span>3.99</span>
               <h3>Indonesian coffe</h3>
               <p>Coffee that’s always you handle your own the way you like.</p>
-              <button>Learn More</button>
+              <button id="card--detail-3">Learn More</button>
+              <div id="card-3" class="card-detail">
+                <h4>Details</h4>
+                <p>
+                  Indonesia is one of the largest coffee-producing and exporting
+                  countries in the world. The majority of Indonesian coffee
+                  production is the robusta variety. Indonesia is also famous
+                  for having several specialty coffees such as 'coffee Luwak
+                  (known as the most expensive coffee in the world) and 'coffee
+                  Mandailing'.
+                </p>
+                <button id="card--detail-3__close">Close</button>
+              </div>
             </div>
           </div>
         </section>
@@ -200,9 +239,9 @@
               </p>
               <ul>
                 <li class="follow-us__content--mail">+8801742-527137</li>
-                <li class="follow-us__content--phone">
-                  mdmaksedur17@gmail.com
-                </li>
+                <div class="follow-us__content--phone">
+                  <li>mdmaksedur17@gmail.com</li>
+                </div>
               </ul>
               <div class="follow-us__social">
                 <ul>
