--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
                   Highlands (including Dak Lak and Lam Dong), and the Central
                   region (including Quang Tri and Lam Dong). Nghe An. Each year,
                   Vietnam produces and supplies a large amount of Coffee to the
-                  domestic and export markets, with five main types. Each coffee
-                  type has its unique shape, aroma, and taste.
+                  domestic and export markets, with five main types.
                 </p>
                 <button id="card--detail-2__close">Close</button>
               </div>
