--- a/index.html
+++ b/index.html
@@ -213,24 +213,26 @@
             </div>
             <button>LOAD MORE</button>
           </div>
-          <div class="our-gallery-slider swiper-container">
-            <h3>Our Gallery</h3>
-            <div class="image-slider__wrapper swiper-wrapper">
-              <div class="swiper-slide image-slider__slide">
-                <img src="img/our-gallery/Image1.png" alt="image" />
-              </div>
-              <div class="image-slider__slide swiper-slide">
-                <img src="img/our-gallery/Image2.png" alt="image" />
-              </div>
-              <div class="image-slider__slide swiper-slide">
-                <img src="img/our-gallery/Image3.png" alt="image" />
+          <div class="slide-wrapper">
+            <div class="our-gallery-slider swiper-container">
+              <h3>Our Gallery</h3>
+              <div class="image-slider__wrapper swiper-wrapper">
+                <div class="swiper-slide image-slider__slide">
+                  <img src="img/our-gallery/Image1.png" alt="image" />
+                </div>
+                <div class="image-slider__slide swiper-slide">
+                  <img src="img/our-gallery/Image2.png" alt="image" />
+                </div>
+                <div class="image-slider__slide swiper-slide">
+                  <img src="img/our-gallery/Image3.png" alt="image" />
+                </div>
               </div>
             </div>
           </div>
         </section>
         <section class="follow-us">
-          <div class="follow-us__wrappwer">
-            <div class="follow-us__content container">
+          <div class="follow-us__wrappwer container">
+            <div class="follow-us__content">
               <h3>Follow US</h3>
               <p>
                 Have an inquiry?<br />
@@ -274,7 +276,7 @@
           </div>
         </section>
         <section class="update-news">
-          <div class="update-news__wrapper">
+          <div class="update-news__wrapper container">
             <h2>Update News</h2>
             <p>
               A cup of brewed coffee represents a contribution of up to 1.8
