function for sending message into telegram

--- a/index.html
+++ b/index.html
@@ -90,16 +90,19 @@
               </h4>
               <form action="#" class="hero-area__form">
                 <input
+                  id="name"
                   type="text"
                   placeholder="Your Name"
                   class="hero-area__input"
                 />
                 <input
+                  id="email"
                   type="email"
                   placeholder="Your Email"
                   class="hero-area__input"
                 />
                 <input
+                  id="phone"
                   type="text"
                   placeholder="Your Phone"
                   class="hero-area__input"
