function for sending message into telegram

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
                 business.
               </h4>
               <form action="#" class="hero-area__form">
-                <input
-                  id="name"
+                <!-- <textarea
+                  id="message"
                   type="text"
-                  placeholder="Your Name"
+                  placeholder="Your Message"
                   class="hero-area__input"
-                />
+                /> -->
                 <input
                   id="email"
                   type="email"
@@ -107,6 +107,13 @@
                   placeholder="Your Phone"
                   class="hero-area__input"
                 />
+                <textarea
+                  class="hero-area__textarea"
+                  name="message"
+                  id="textarea"
+                  cols="30"
+                  rows="10"
+                ></textarea>
                 <button id="hero-area__submit" class="hero-area__submit">
                   Submit
                 </button>
