--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
           <div class="bar"></div>
         </div>
         <nav class="navbar">
-          <a href="#home">Home</a>
-          <a href="#about">About Us</a>
-          <a href="#menu">Menu</a>
-          <a href="#products">Review</a>
-          <a href="#review">Contact</a>
+          <a href="#">Home</a>
+          <a href="#">About Us</a>
+          <a href="#">Menu</a>
+          <a href="#">Review</a>
+          <a href="#">Contact</a>
         </nav>
         <div id="mobile" class="mobMenu">
           <nav class="mobile-menu">
@@ -89,12 +89,6 @@
                 business.
               </h4>
               <form action="#" class="hero-area__form">
-                <!-- <textarea
-                  id="message"
-                  type="text"
-                  placeholder="Your Message"
-                  class="hero-area__input"
-                /> -->
                 <input
                   id="email"
                   type="email"
@@ -250,16 +244,14 @@
               </p>
               <ul>
                 <li class="follow-us__content--mail">+8801742-527137</li>
-                <div class="follow-us__content--phone">
-                  <li>mdmaksedur17@gmail.com</li>
-                </div>
+                  <li class="follow-us__content--phone">mdmaksedur17@gmail.com</li>
               </ul>
               <div class="follow-us__social">
                 <ul>
                   <li>
                     <img
                       src="img/follow-us/Twitter.svg"
-                      al="social icon Twitter"
+                      alt="social icon Twitter"
                     />
                   </li>
                   <li>
